--- a/src/Otw.WebApp/Pages/List.razor
+++ b/src/Otw.WebApp/Pages/List.razor
@@ -32,7 +32,8 @@ else
         
         var list = new List<(string English, string Polish)>();
 
-        var lines = csvContent.Split(['\r', '\n'], StringSplitOptions.RemoveEmptyEntries);
+        // ReSharper disable once UseCollectionExpression
+        var lines = csvContent.Split(new[] { '\r', '\n' }, StringSplitOptions.RemoveEmptyEntries);
         
         for (int i = 0; i < lines.Length; i++)
         {
