--- a/src/Otw.WebApp/Layout/NavMenu.razor
+++ b/src/Otw.WebApp/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Learn">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Learn
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="List">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> List
             </NavLink>
