--- a/src/Otw.WebApp/Pages/Learn.razor
+++ b/src/Otw.WebApp/Pages/Learn.razor
@@ -7,11 +7,7 @@
 
 <h3>Learn</h3>
 
-@if (_currentWord is null)
-{
-    <p><em>Loading...</em></p>
-}
-else
+@if (_currentWord is not null)
 {
     <div class="card">
         <div class="card-body">
@@ -20,6 +16,12 @@ else
             <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
         </div>
     </div>
+}
+else
+{
+    <p>
+        <em>Loading...</em>
+    </p>
 }
 
 @code {
