Remove comment from code

--- a/src/Otw.WebApp/Pages/Review.razor
+++ b/src/Otw.WebApp/Pages/Review.razor
@@ -44,7 +44,7 @@ else
         if (_currentWord is not null)
         {
             _currentWord = await NextWordHandler.ExecuteAsync(_currentWord.Id);
-            _showTranslation = false; // reset przy każdym nowym słowie
+            _showTranslation = false;
         }
     }
 
