Refactor to use handler interfaces for Learn and Review modes, updating dependency injection for improved testability

--- a/src/Otw.WebApp/Pages/Review.razor
+++ b/src/Otw.WebApp/Pages/Review.razor
@@ -2,8 +2,8 @@
 @using Otw.Core.Application.Review
 @using Otw.Core.Domain
 
-@inject LastWordQueryHandler LastWordHandler
-@inject NextWordCmdHandler NextWordHandler
+@inject ILastWordQueryHandler LastWordHandler
+@inject INextWordCmdHandler NextWordHandler
 
 <h3>Learn</h3>
 
