--- a/src/Otw.WebApp/Pages/Learn.razor
+++ b/src/Otw.WebApp/Pages/Learn.razor
@@ -2,8 +2,8 @@
 @using Otw.Core.Application.Learn
 @using Otw.Core.Domain
 
-@inject LastWordQueryHandler LastWordHandler
-@inject NextWordCmdHandler NextWordHandler
+@inject ILastWordQueryHandler LastWordHandler
+@inject INextWordCmdHandler NextWordHandler
 
 <h3>Learn</h3>
 
