--- a/src/Otw.WebApp/Layout/NavMenu.razor
+++ b/src/Otw.WebApp/Layout/NavMenu.razor
@@ -25,17 +25,17 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Learn">
+            <NavLink class="nav-link" href="learn">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Learn
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Review">
+            <NavLink class="nav-link" href="review">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Review
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="List">
+            <NavLink class="nav-link" href="list">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> List
             </NavLink>
         </div>
