--- a/src/Otw.WebApp/Pages/Home.razor
+++ b/src/Otw.WebApp/Pages/Home.razor
@@ -1,5 +1,9 @@
 ﻿@page "/"
+@inject NavigationManager Navigation
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
+@code {
+    protected override void OnInitialized()
+    {
+        Navigation.NavigateTo("/list");
+    }
+}
