--- a/src/Otw.WebApp/Pages/Review.razor
+++ b/src/Otw.WebApp/Pages/Review.razor
@@ -5,7 +5,7 @@
 @inject ILastWordQueryHandler LastWordHandler
 @inject INextWordCmdHandler NextWordHandler
 
-<h3>Learn</h3>
+<h3>Review</h3>
 
 @if (_currentWord is not null)
 {
