--- a/src/Otw.WebApp/Pages/Home.razor
+++ b/src/Otw.WebApp/Pages/Home.razor
@@ -4,6 +4,6 @@
 @code {
     protected override void OnInitialized()
     {
-        Navigation.NavigateTo("/list");
+        Navigation.NavigateTo("/learn");
     }
 }
