--- a/src/Otw.WebApp/Layout/NavMenu.razor
+++ b/src/Otw.WebApp/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+﻿<nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
     <div class="container">
         <a class="navbar-brand" href="#">1000 words</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation" @onclick="ToggleNavMenu">
