--- a/src/Otw.WebApp/Pages/Learn.razor
+++ b/src/Otw.WebApp/Pages/Learn.razor
@@ -5,24 +5,34 @@
 @inject ILastWordQueryHandler LastWordHandler
 @inject INextWordCmdHandler NextWordHandler
 
-<h3>Learn</h3>
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h3 class="text-center mb-4">Learn</h3>
 
-@if (_currentWord is not null)
-{
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">@_currentWord.Value</h5>
-            <p class="card-text">Meaning: @_currentWord.Translation</p>
-            <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
+            @if (_currentWord is not null)
+            {
+                <div class="card shadow-sm text-center">
+                    <div class="card-body">
+                        <h5 class="card-title display-2 text-primary">@_currentWord.Value</h5>
+                        <p class="card-text fs-3 mb-4 text-success">@_currentWord.Translation</p>
+
+                        <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div class="text-center mt-5">
+                    <div class="spinner-border text-primary" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <p class="mt-3 text-muted">Loading data...</p>
+                </div>
+            }
         </div>
     </div>
-}
-else
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
+</div>
 
 @code {
     private WordEntity? _currentWord;
