Add localized 404 message to App.razor

--- a/src/Otw.WebApp/App.razor
+++ b/src/Otw.WebApp/App.razor
@@ -6,7 +6,9 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
+            <h2>404 Not found</h2>
             <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">Strona o podanym adresie nie istnieje.</p>
         </LayoutView>
     </NotFound>
 </Router>
