--- a/src/Otw.WebApp/Layout/MainLayout.razor
+++ b/src/Otw.WebApp/Layout/MainLayout.razor
@@ -1,7 +1,40 @@
 ﻿@inherits LayoutComponentBase
 
-<NavMenu/>
+<nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+    <div class="container">
+        <a class="navbar-brand" href="#">1000 words</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation" @onclick="ToggleNavMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="@NavMenuCssClass navbar-collapse" id="mainNavbar" @onclick="ToggleNavMenu">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="learn" Match="NavLinkMatch.All">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Learn
+                    </NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="review">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Review
+                    </NavLink>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <main  class="container mt-4">
     @Body
 </main>
+
+@code {
+    private bool _collapseNavMenu = true;
+
+    private string? NavMenuCssClass => _collapseNavMenu ? "collapse" : null;
+
+    private void ToggleNavMenu()
+    {
+        _collapseNavMenu = !_collapseNavMenu;
+    }
+}
