--- a/src/Otw.WebApp/Pages/Review.razor
+++ b/src/Otw.WebApp/Pages/Review.razor
@@ -8,7 +8,7 @@
 <div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <h3 class="text-center mb-4">Review</h3>
+            <h3 class="text-center mb-4">Review mode</h3>
 
             @if (_currentWord is not null)
             {
