--- a/src/Otw.WebApp/Pages/Learn.razor
+++ b/src/Otw.WebApp/Pages/Learn.razor
@@ -16,8 +16,10 @@
                     <div class="card-body">
                         <h5 class="card-title display-2 text-primary">@_currentWord.Value</h5>
                         <p class="card-text fs-3 mb-4 text-success">@_currentWord.Translation</p>
-
-                        <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
+                        
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
+                        </div>
                     </div>
                 </div>
             }
