--- a/src/Otw.WebApp/Pages/Learn.razor
+++ b/src/Otw.WebApp/Pages/Learn.razor
@@ -17,7 +17,7 @@
                         <h5 class="card-title display-2 text-primary">@_currentWord.Value</h5>
                         <p class="card-text fs-3 mb-4 text-success">@_currentWord.Translation</p>
                         
-                        <div class="d-grid gap-2">
+                        <div class="d-grid">
                             <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
                         </div>
                     </div>
