--- a/src/Otw.WebApp/Pages/Review.razor
+++ b/src/Otw.WebApp/Pages/Review.razor
@@ -15,10 +15,16 @@
                 <div class="card shadow-sm text-center">
                     <div class="card-body">
                         <h5 class="card-title display-2 text-primary">@_currentWord.Value</h5>
-                        <p class="card-text fs-3 mb-4 text-success" style="visibility:@(_showTranslation ? "visible" : "hidden")">@_currentWord.Translation</p>
-                        
+                        <p class="card-text fs-3 mb-4 text-success"
+                           style="visibility:@(_showTranslation ? "visible" : "hidden")">
+                            @_currentWord.Translation
+                        </p>
+
                         <div class="d-grid gap-2">
-                            <button class="btn btn-success" @onclick="ShowTranslation">Show translation</button>
+                            @if (!_showTranslation)
+                            {
+                                <button class="btn btn-success" @onclick="ShowTranslation">Show translation</button>
+                            }
                             <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
                         </div>
                     </div>
