Standardize button text casing in Review.razor and Learn.razor

--- a/src/Otw.WebApp/Pages/Learn.razor
+++ b/src/Otw.WebApp/Pages/Learn.razor
@@ -18,7 +18,7 @@
                         <p class="card-text fs-3 mb-4 text-success">@_currentWord.Translation</p>
                         
                         <div class="d-grid">
-                            <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
+                            <button class="btn btn-primary" @onclick="LoadNextWord">Next word</button>
                         </div>
                     </div>
                 </div>
