--- a/src/Otw.WebApp/Pages/Review.razor
+++ b/src/Otw.WebApp/Pages/Review.razor
@@ -25,7 +25,7 @@
                             {
                                 <button class="btn btn-success" @onclick="ShowTranslation">Show translation</button>
                             }
-                            <button class="btn btn-primary" @onclick="LoadNextWord">Next Word</button>
+                            <button class="btn btn-primary" @onclick="LoadNextWord">Next word</button>
                         </div>
                     </div>
                 </div>
