--- a/src/Otw.WebApp/Pages/Learn.razor
+++ b/src/Otw.WebApp/Pages/Learn.razor
@@ -9,9 +9,13 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h3 class="text-center mb-4">Learn mode</h3>
-
+            
             @if (_currentWord is not null)
             {
+                <div class="progress mb-4" role="progressbar" aria-label="Example with label" aria-valuenow="@ProgressPercent" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar" style="width: @ProgressPercent%">@ProgressPercent%</div>
+                </div>
+                
                 <div class="card shadow-sm text-center">
                     <div class="card-body">
                         <h5 class="card-title display-2 text-primary">@_currentWord.Value</h5>
@@ -38,12 +42,14 @@
 
 @code {
     private WordEntity? _currentWord;
-    
+    private const int TotalWords = 1000;
+    private int ProgressPercent => (int)((double)(_currentWord?.Id ?? 0) / TotalWords * 100);
+
     protected override async Task OnInitializedAsync()
     {
         _currentWord = await LastWordHandler.ExecuteAsync();
     }
-    
+
     private async Task LoadNextWord()
     {
         if (_currentWord is not null)
