--- a/src/Otw.WebApp/Pages/Review.razor
+++ b/src/Otw.WebApp/Pages/Review.razor
@@ -54,11 +54,9 @@
     
     private int ProgressPercent => (int)((double)(_currentWord?.Id ?? 0) / Consts.TotalWords * 100);
     
-    protected override async Task OnInitializedAsync()
-    {
+    protected override async Task OnInitializedAsync() => 
         _currentWord = await LastWordHandler.ExecuteAsync();
-    }
-    
+
     private async Task LoadNextWord()
     {
         if (_currentWord is not null)
@@ -68,8 +66,6 @@
         }
     }
 
-    private void ShowTranslation()
-    {
+    private void ShowTranslation() => 
         _showTranslation = true;
-    }
 }
