Add "About" link to navbar in MainLayout.razor

--- a/src/Otw.WebApp/Layout/MainLayout.razor
+++ b/src/Otw.WebApp/Layout/MainLayout.razor
@@ -10,6 +10,11 @@
         <div class="@NavMenuCssClass navbar-collapse" id="mainNavbar" @onclick="ToggleNavMenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
+                    <NavLink class="nav-link" href="about">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> About
+                    </NavLink>
+                </li>
+                <li class="nav-item">
                     <NavLink class="nav-link" href="learn" Match="NavLinkMatch.All">
                         <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Learn
                     </NavLink>
