Extract learning state constants to `ApplicationConsts` for improved reusability in Home and About pages

--- a/src/Otw.WebApp/Pages/About.razor
+++ b/src/Otw.WebApp/Pages/About.razor
@@ -1,4 +1,5 @@
 ﻿@page "/about"
+@using Otw.Core.Application
 @using Otw.Core.Domain
 @inject NavigationManager Navigation
 @inject ILocalStorageService Storage
@@ -45,7 +46,7 @@
 
     private async Task StartLearning()
     {
-        await Storage.SetItemAsync("LearnStarted", "true");
+        await Storage.SetItemAsync(ApplicationConsts.LearnStartedKey, ApplicationConsts.LearnStartedValue);
         
         Navigation.NavigateTo("/learn");
     }
