--- a/src/Otw.WebApp/Pages/Learn.razor
+++ b/src/Otw.WebApp/Pages/Learn.razor
@@ -44,7 +44,7 @@
 @code {
     private WordEntity? _currentWord;
     
-    private int ProgressPercent => (int)((double)(_currentWord?.Id ?? 0) / Consts.TotalWords * 100);
+    private int ProgressPercent => (int)((double)(_currentWord?.Id ?? 0) / DomainConsts.TotalWords * 100);
 
     protected override async Task OnInitializedAsync() => 
         _currentWord = await LastWordHandler.ExecuteAsync();
