Expand About.razor with English learning tips section

--- a/src/Otw.WebApp/Pages/About.razor
+++ b/src/Otw.WebApp/Pages/About.razor
@@ -25,6 +25,14 @@
                 <li>automatyczny wygląd ciemny/jasny</li>
             </ul>
 
+            <h3 class="mt-4 mb-3">Nauka angielskiego jest prosta</h3>
+            <ol class="mb-4">
+                <li>Znajdź i opanuj podręcznik, aby poznać podstawy - może być PDF z internetu.</li>
+                <li><strong>Poznaj 1000 najpopularniejszych słów, aby rozumieć codzienne rozmowy.</strong></li>
+                <li>Osłuchaj się - oglądaj filmy o interesujących Cię tematach z napisami po angielsku.</li>
+                <li>Zacznij mówić - powtarzaj zdania z filmów na głos.</li>
+            </ol>
+            
             <div class="text-center mt-4">
                 <button class="btn btn-primary btn-lg"
                         @onclick="StartLearning">
