--- a/src/Otw.WebApp/Pages/About.razor
+++ b/src/Otw.WebApp/Pages/About.razor
@@ -36,7 +36,7 @@
             <div class="text-center mt-4">
                 <button class="btn btn-primary btn-lg"
                         @onclick="StartLearning">
-                    Zacznij naukę
+                    Zacznij naukę słówek
                 </button>
             </div>
 
