--- a/src/Otw.WebApp/Layout/MainLayout.razor
+++ b/src/Otw.WebApp/Layout/MainLayout.razor
@@ -11,17 +11,17 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <NavLink class="nav-link" href="about">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> About
+                        <i class="bi bi-info-square"></i> About
                     </NavLink>
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="learn" Match="NavLinkMatch.All">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Learn
+                        <i class="bi bi-book"></i> Learn
                     </NavLink>
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="review">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Review
+                        <i class="bi bi-journal-check"></i> Review
                     </NavLink>
                 </li>
             </ul>
