--- a/src/Otw.WebApp/Layout/MainLayout.razor
+++ b/src/Otw.WebApp/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
     <div class="container">
-        <a class="navbar-brand" href="#">1000 words</a>
+        <a class="navbar-brand" href="#"><i class="bi bi-list-check"></i> 1000 words</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
