--- a/src/Otw.WebApp/Layout/MainLayout.razor
+++ b/src/Otw.WebApp/Layout/MainLayout.razor
@@ -1,11 +1,11 @@
 ﻿@using Microsoft.Extensions.Localization
 @inherits LayoutComponentBase
-@inject IStringLocalizer<Resources.Layout.MainLayout> Localizer
+@inject IStringLocalizer<Resources.Layout.MainLayout> Loc
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
     <div class="container">
-        <a class="navbar-brand" href="#"><i class="bi bi-list-check"></i> @Localizer["AppName"]</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="@Localizer["ToggleNav"]" @onclick="ToggleNavMenu">
+        <a class="navbar-brand" href="#"><i class="bi bi-list-check"></i> @Loc["AppName"]</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="@Loc["ToggleNav"]" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -13,17 +13,17 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <NavLink class="nav-link" href="about">
-                        <i class="bi bi-info-square"></i> @Localizer["About"]
+                        <i class="bi bi-info-square"></i> @Loc["About"]
                     </NavLink>
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="learn" Match="NavLinkMatch.All">
-                        <i class="bi bi-book"></i> @Localizer["Learn"]
+                        <i class="bi bi-book"></i> @Loc["Learn"]
                     </NavLink>
                 </li>
                 <li class="nav-item">
                     <NavLink class="nav-link" href="review">
-                        <i class="bi bi-journal-check"></i> @Localizer["Review"]
+                        <i class="bi bi-journal-check"></i> @Loc["Review"]
                     </NavLink>
                 </li>
             </ul>
