Add localization support to Review page
Introduced resource files (Review.resx and Designer.cs) for the Review page and updated the project file to embed these resources. Injected IStringLocalizer into Review.razor to enable localized strings.

--- a/src/Otw.WebApp/Pages/Review.razor
+++ b/src/Otw.WebApp/Pages/Review.razor
@@ -1,6 +1,9 @@
 ﻿@page "/review"
+@using Microsoft.Extensions.Localization
 @using Otw.Core.Application.Review
 @using Otw.Core.Domain
+
+@inject IStringLocalizer<Resources.Pages.Review> Loc
 
 @inject ILastWordQueryHandler LastWordHandler
 @inject INextWordCmdHandler NextWordHandler
